# Divelogs

./: .gitignore  .gitmodules  README.md  build.gradle  gradlew  index.html  local.properties  settings.gradle
.github/workflows/: build.yml  main.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  map.html
app/src/main/cpp/: CMakeLists.txt  bridge.cpp
app/src/main/java/fi/deeplog/bridge/: BleTransport.kt  BridgeService.kt  DcBridge.kt  MainActivity.kt  SupabaseClient.kt
app/src/main/res/drawable/: info_box_bg.xml  input_bg.xml  outline_btn_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
